<resources>
    <string name="app_name">AppGame</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">안녕하세요</string>
    <string name="nav_header_subtitle">-----------------------</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_test">검사 하기 </string>
    <string name="menu_game">게임 하기</string>
    <string name="menu_prevent">치매에 대해 알아보기 !!</string>
    <string name="menu_result">게임 결과 보기</string>
    <string name="menu_map">지도로 시설 보기</string>
    <string name="menu_list">리스트로 시설 보기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="text_color">
        <item>검정</item>
        <item>파랑</item>
        <item>빨강</item>
        <item>하얀</item>
        <item>초록</item>
        <item>노랑</item>
        <item>보라</item>
        <item>주황</item>
        <item>기본</item>
    </string-array>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_memory_test">MemoryTest</string>
    <string name="title_activity_main_memory">MainMemory</string>
    <string name="title_activity_test_dementia">TestDementia</string>

    <string name="app_name7">QuickClick</string>
    <string name="title_mainhome">메인 홈으로 가기</string>
    <string name="title_report">게임 결과보기</string>
    <string name="title_gamehome">게임 홈으로 가기</string>
    <string name="title_score">SCORE</string>
    <string name="title_level">LEVEL</string>
    <string name="title_best">BEST</string>
    <string name="level_easy">Easy</string>
    <string name="level_normal">Normal</string>
    <string name="level_hard">Hard</string>
    <string name="type_1234">1234</string>
    <string name="type_english">ABCD</string>
    <string name="type_korean">가나다</string>

    <string name="title_stage">STAGE</string>
    <string name="title_stage1">동식물</string>
    <string name="title_stage2">사자성어</string>
    <string name="title_stage3">아이티윌</string>
    <string name="toast_right">정답</string>
    <string name="toast_wrong">오답</string>


</resources>
