<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_menu_test"
            android:title="@string/menu_test" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_menu_game"
            android:title="@string/menu_game" />
        <item
            android:id="@+id/nav_prevention"
            android:icon="@drawable/ic_menu_prevent"
            android:title="@string/menu_prevent"
            />
    </group>

    <item android:title="Report">
        <menu>
            <item
                android:id="@+id/nav_chart"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_result" >
            </item>

        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item android:title="Facility">
            <menu>
                <item
                    android:id="@+id/nav_map"
                    android:icon="@drawable/ic_menu_map"
                    android:title="@string/menu_map"/>
                <item
                    android:id="@+id/nav_list"
                    android:icon="@drawable/ic_menu_list"
                    android:title="@string/menu_list"
                    />

            </menu>

        </item>

    </group>

</menu>
