<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amber100"
    tools:context=".MainActivityGame7">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:background="@color/amber50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/jalnan"
                android:gravity="center"
                android:text="@string/title_score"
                android:textColor="@color/amber800"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Chronometer
                android:id="@+id/textScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jalnan"
                android:gravity="center"
                android:textColor="@color/amber900"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/jalnan"
                android:gravity="center"
                android:text="@string/title_level"
                android:textColor="@color/amber800"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jalnan"
                android:text="@string/level_easy"
                android:gravity="center"
                android:textColor="@color/amber900"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="@font/jalnan"
                android:gravity="center"
                android:text="@string/title_best"
                android:textColor="@color/amber800"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textBest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/jalnan"
                android:gravity="center"
                android:text="00:00"
                android:textColor="@color/amber900"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:background="@color/amber900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"></FrameLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="2dp"
        android:background="@color/amber50"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TableLayout
            android:id="@+id/tableBase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="120dp">

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/btnLevelDown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/amber50"
                    android:foreground="@drawable/ic_right_game7"
                    android:rotation="-90" />
                <TextView
                    android:id="@+id/textSelectLevel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/amber900"
                    android:text="EASY"
                    android:textSize="25sp"
                    android:fontFamily="@font/jalnan"/>
                <ImageButton
                    android:id="@+id/btnLevelUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/amber50"
                    android:foreground="@drawable/ic_right_game7"
                    android:rotation="90" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/btnTypeDown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/amber50"
                    android:foreground="@drawable/ic_right_game7"
                    android:rotation="-90" />
                <TextView
                    android:id="@+id/textSelectType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/amber900"
                    android:text="1234"
                    android:textSize="25sp"
                    android:fontFamily="@font/jalnan"/>
                <ImageButton
                    android:id="@+id/btnTypeUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/amber50"
                    android:foreground="@drawable/ic_right_game7"
                    android:rotation="90" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!--<TextView-->
        <!--android:id="@+id/message"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="@dimen/activity_horizontal_margin"-->
        <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
        <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
        <!--android:text="@string/title_home"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        app:itemBackground="@color/amber50"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/game7_bottom_nav_menu" />

</android.support.constraint.ConstraintLayout>